--- a/uppg2.html
+++ b/uppg2.html
@@ -5,6 +5,26 @@
 	<title>Övning2</title>
 </head>
 <body>
-<p>Övning 2<p>
+<h2>Övning 1</h2>
+<h4>Introduktion</h4>
+<p style="font-size: 13px;">Scelerisque volutpat placerat euismod dis nulla habitant dictumst rhoncus gravida dignissim. 
+	Tempus velit adipiscing libero id varius etiam faucibus. Consectetur vestibulum pretium nisi, 
+	proin praesent? Aliquam ante nostra facilisi quisque dui potenti magna ad. Rutrum at sollicitudin conubia malesuada. 
+	Risus sociis eleifend adipiscing penatibus fames ad quisque lacinia cras ac vestibulum nulla. Curabitur cubilia quisque senectus 
+	euismod aliquet est class vestibulum ad taciti. Tellus odio tincidunt, tempus ridiculus arcu habitasse per blandit etiam sollicitudin torquent. 
+	Etiam nunc congue consequat cursus. Aenean purus cubilia.</p>
+<h3>Fortsättning</h3>
+<p style="font-size: 13px;">I kursen HTML och CSS kommer jag lära mig att bygga webbsidor
+med HTML5.Jag kommer att använda<br>
+paragrafer,<br>
+radbrytningar,<br>
+och <em>andra</em> <strong>sorters</strong> <u>formatering.</u>
+</p>
+<p style="font-size: 13px;">
+Följande bild finns på https://devrant.com/search?term=programming+jokes
+</p>
+<img src="https://img.devrant.com/devrant/rant/r_204721_anPgU.jpg" alt="Img Joke" width="250">
+
+</body>
 </body>
 <html>
