--- a/uppg2.html
+++ b/uppg2.html
@@ -7,7 +7,7 @@
 <body>
 <h2>Övning 2</h2>
 <h4>Introduktion</h4>
-<p style="font-size: 13px;">Scelerisquu volutpat placerat euismod dis nulla habitant dictumst rhoncus gravida dignissim. 
+<p style="font-size: 13px;">Scelerisqu volutpat placerat euismod dis nulla habitant dictumst rhoncus gravida dignissim. 
 	Tempus velit adipiscing libero id varius etiam faucibus. Consectetur vestibulum pretium nisi, 
 	proin praesent? Aliquam ante nostra facilisi quisque dui potenti magna ad. Rutrum at sollicitudin conubia malesuada. 
 	Risus sociis eleifend adipiscing penatibus fames ad quisque lacinia cras ac vestibulum nulla. Curabitur cubilia quisque senectus 
