--- a/uppg3.html
+++ b/uppg3.html
@@ -4,8 +4,31 @@
         <meta charset="utf8"/>
         <title>Övning3</title>
 </head>  
-<body>
-        <h2>Övning 1</h2>
+<body style="background-color:#cef6ce;">
+    
+  <h1>These are a few of my favourite things</h1>
+  <strong></strong><ol style="color:rgb(172, 175, 172); font-size: 15px; font-family:verdana">
+        <li>Raindrops on roses</li>
+        <li>Whiskers on kittens</li>
+        <li>Bright copper kettles</li>
+        <li>Warm woolen mittens</li>
+        <li>Brown paper packages</li>
+   </ol></strong>
 
-</body>>
+   <ul style="background-color: HotPink; color: black; font-family:Courier">
+        <li>Cream colored ponies</li>
+        <li>Crisp apple strudels</li>
+        <li style="text-align:center;">Doorbells</li>
+        <li style="text-align:right;">Sleighbells</li>
+        <li style="text-align:center;">Schnitzel with noodles</li>
+        <li>Wild geese that fly with the moon on their wings</li>
+        </li>
+      </ul>
+      <p>Girls in <em>white</em> dresses with <em>blue</em> satin sashes<br>
+         Snowflakes that <strong>stay</strong> on my nose and eyelashes<br>
+         <em>Silver white</em> winters that melt into springs<br>
+         <u>These are a few of my favorite things</u>
+    </p>
+
+</body>
 </html>
