--- a/uppg4.html
+++ b/uppg4.html
@@ -23,19 +23,19 @@
         <tbody>
             <tr>    <td style="border: 2px dashed grey;"> Michelle Carter</td>
                     <td style="border: 2px dashed grey;"> 20,63</td>
-                    <td style="border: 2px dashed grey; text-align:center;"> 1 </td>
+                    <td style="border: 2px dashed grey; text-align:center; background-color: gold"> 1 </td>
                     <td style="border: 2px dashed grey; text-align:right;"> USA</td> 
                     </tr>
 
             <tr>    <td style="border: 2px dashed grey;"> Valerie Adams </td>
                     <td style="border: 2px dashed grey;"> 20,42 </td>
-                    <td style="border: 2px dashed grey; text-align:center;"> 2 </td>
+                    <td style="border: 2px dashed grey; text-align:center; background-color:silver"> 2 </td>
                     <td style="border: 2px dashed grey; text-align:right;"> Nya Zeeland </td> 
                     </tr>
 
             <tr>    <td style="border: 2px dashed grey;"> Anita Marton </td>
                     <td style="border: 2px dashed grey;"> 19,87 </td>
-                    <td style="border: 2px dashed grey; text-align:center;"> 3 </td>
+                    <td style="border: 2px dashed grey; text-align:center; background-color: rgb(167, 75, 0)"> 3 </td>
                     <td style="border: 2px dashed grey; text-align:right;"> Ungern </td> 
                     </tr>
 
