--- a/uppg4.html
+++ b/uppg4.html
@@ -5,6 +5,9 @@
         <title>Övning3</title>
 </head>
 <body>
+
+        <div style=" background-color: #cef6ce; width: 370px; height:1.2em;"></div>
+
     <h2>Övning 2</h2>
     <table style=
     "background-color: #cef6ce; 
@@ -14,10 +17,10 @@
     
         <thead style="background-color: rgb(217, 221, 2);">
             <tr> 
-                <th style="border:3px dashed darkred;">Idrottare</th> 
-                <th style="border:3px dashed darkred;">Resultat</th> 
-                <th style="border:3px dashed darkred;">Placering</th> 
-                <th style="border:3px dashed darkred;">Land</th></tr>
+                <th style="border:2.5px dashed darkred; padding-bottom: 0px;">Idrottare</th> 
+                <th style="border:2.5px dashed darkred;">Resultat</th> 
+                <th style="border:2.5px dashed darkred;">Placering</th> 
+                <th style="border:2.5px dashed darkred;">Land</th></tr>
         </thead>
         
         <tbody>
@@ -35,7 +38,7 @@
 
             <tr>    <td style="border: 2px dashed grey;"> Anita Marton </td>
                     <td style="border: 2px dashed grey;"> 19,87 </td>
-                    <td style="border: 2px dashed grey; text-align:center; background-color: rgb(167, 75, 0)"> 3 </td>
+                    <td style="border: 2px dashed grey; text-align:center; background-color: rgb(209, 99, 9)"> 3 </td>
                     <td style="border: 2px dashed grey; text-align:right;"> Ungern </td> 
                     </tr>
 
