--- a/uppg4.html
+++ b/uppg4.html
@@ -4,11 +4,11 @@
         <meta charset="utf8"/>
         <title>Övning3</title>
 </head>
-<body>
+<body style="margin-top: 0;">
 
-        <div style=" background-color: #cef6ce; width: 370px; height:1.2em;"></div>
+        <div style=" background-color: #cef6ce; width: 370px; height:1.2em; margin : "></div>
 
-    <h2>Övning 2</h2>
+    <h2>Övning 4</h2>
     <table style=
     "background-color: #cef6ce; 
     color: black; 
