--- a/uppg4.html
+++ b/uppg4.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-        <meta charset="utf8"/>
-        <title>Övning3</title>
+<!DOCTYPE HTML>
+<html>
+</head>
+	<meta charset="utf8"/>
+	<title>Övning6</title>
 </head>
 <body style="margin-top: 0;">
 
