--- a/uppg3.html
+++ b/uppg3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="sv">
 <head>
         <meta charset="utf8"/>
         <title>Övning3</title>
@@ -7,7 +7,7 @@
 <body style="background-color:#cef6ce;">
     
   <h1>These are a few of my favourite things</h1>
-  <strong></strong><ol style="color:rgb(172, 175, 172); font-size: 15px; font-family:verdana">
+  <strong><ol style="color:rgb(172, 175, 172); font-size: 15px; font-family:verdana">
         <li>Raindrops on roses</li>
         <li>Whiskers on kittens</li>
         <li>Bright copper kettles</li>
