--- a/uppg6.html
+++ b/uppg6.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="sv">
 </head>
 	<meta charset="utf8"/>
 	<title>Övning6</title>
 </head>
-<body>
+<body style="margin-top: 0;">
         <style>
         .container {
             display: table;
