--- a/uppg4.html
+++ b/uppg4.html
@@ -6,13 +6,10 @@
 </head>
 <body style="margin-top: 0;">
 
-        <div style=" background-color: #cef6ce; width: 370px; height:1.2em; margin : "></div>
+        <div style="background-color: #cef6ce; width: 370px; height:1.2em;"></div>
 
     <h2>Övning 4</h2>
-    <table style=
-    "background-color: #cef6ce; 
-    color: black; 
-    border: 2px solid grey;">
+    <table style="background-color: #cef6ce; color: black; border: 2px solid grey">
     <caption>Kula, damer, OS 2016</caption>
     
         <thead style="background-color: rgb(217, 221, 2);">
