--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Html-ovn</title>
 </head>
 <body>
+        <p>presentation - vem är du</p>
+        <p>länk till LinkedIn-kontot</p>
+        <p>berätta om din utbildning</p>
+        <p>berätta om det häftigaste projektet du har gjort hittills, med länk till GitHub-repot</p>
+        
     
 </body>
 </html>
