--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Html-ovn</title>
+    <link rel = "stylesheet"
+    type = "text/css"
+    href = "myStyle.css" />
+  </head>
 </head>
 <body>
-        <p>presentation - vem är du</p>
+        <div>presentation - vem är du</div>  
         <p>länk till LinkedIn-kontot</p>
         <p>berätta om din utbildning</p>
         <p>berätta om det häftigaste projektet du har gjort hittills, med länk till GitHub-repot</p>
