--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <br>
     
     
-    <p class="logo"> Tobias <span class="logo">FRONT-END FEU 2019</span></p>
+    <p class="logo"> TOBIAS <span class="logo">FRONT-END FEU 2019</span></p>
 
     <br>
     <br>
